# hs-ontology-api-spec.yaml
@@ -478,7 +478,42 @@ paths:
   /genes/{id}:
     get:
       operationId: genes_get
-      summary: Return detailed information on a gene specified by a HGNC identifier.
+      summary: Return reference information on a set of genes specified by a HGNC identifiers
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: Comma-delimited set of HGNC identifiers. An identifier can be an approved ID (e.g., 7178); approved symbol (e.g., MMRN1); alias (e.g., EMILIN4 for MMRN1); previous symbol (e.g., MMRN for MMRN1); previous alias; or a name string (approved, previous, alias--e.g., "multimerin 1").
+          schema:
+            type: string
+            example: MMRN1,BRCA1
+      responses:
+        '200':
+          description: reference information on the genes specified by the HGNC identifiers.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/GeneResponse'
+        '303':
+          description: The response size exceeds a limit set by the server. The response content is stored in a file in a AWS S3 bucket. The returned response includes a URL that can be used to download the stored file.
+        '400':
+          description: Missing parameter; invalid parameter value
+        '403':
+          description: The response size exceeds a limit set by the server.
+        '404':
+          description: No information for gene with HGNC identifier *id*.
+        '504':
+          description: The query run time exceeded the specified timeout.
+        '5XX':
+          description: Unexpected error
+      tags:
+        - biological entities
+  /genes/{id}/detail:
+    get:
+      operationId: genes_detail_get
+      summary: Return detailed information on a gene specified by a HGNC identifier, including mappings from annotations
       parameters:
         - name: id
           in: path
@@ -1451,6 +1486,68 @@ components:
               type: number
               description: Calculated count of items. If starts_with is non-null, the count is that of the genes with approved HGNC symbols that start with the value of starts_with.
               example: 500
+    GeneResponse:
+      type: object
+      description: Refre ce information on a gene requested by the gene endpoint
+      properties:
+        alias_names:
+          type: array
+          description: HGNC alias names
+          items:
+            type: string
+          example: [ glycoprotein Ia* ]
+        alias_symbols:
+          type: array
+          description: HGNC alias symbols
+          items:
+            type: string
+          example: [ GPIa*,EMILIN4,ECM ]
+        approved_name:
+          type: string
+          description: HGNC approved name
+          example: multimerin 1
+        approved_symbol:
+          type: string
+          description: HGNC approved symbol
+          example: MMRN1
+        hgnc_id:
+          type: number
+          description: numeric HGNC ID for the gene
+          example: 60
+        previous_names:
+          type: array
+          description: previous names for the gene in HGNC
+          items:
+            type: string
+          example: [ multimerin ]
+        previous_symbols:
+          type: array
+          description: previous symbols for the gene in HGNC
+          items:
+            type: string
+            example: [ MMRN ]
+        references:
+          type: array
+          description: Reference for the gene between HGNC and other vocabularies. References can be either a cross-reference (e.g., between HGNC ID and NCBI Entrez ID) or from a known relationship (e.g., gene-protein relationships between a gene in HGNC and a protein in UniProtKB).
+          items:
+            type: object
+            properties:
+              id:
+                type: string
+                description: ID (code) for the reference in the source
+                example: 22915
+              source:
+                type: string
+                description: source vocabulary for the reference
+                example: entrez
+              url:
+                type: string
+                description: URL to reference site
+                example: https://www.ncbi.nlm.nih.gov/gene/22915
+        summary:
+          type: string
+          description: RefSeq summary of the gene
+          example: Multimerin is a massive, soluble protein found in....
     GeneDetailResponse: # JAS Sept 2023
       type: object
       description: Detailed information on a gene requested by the gene endpoint
